--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
         <dependency>
             <groupId>com.testdroid</groupId>
             <artifactId>testdroid-api</artifactId>
-            <version>2.3</version>
+            <version>2.9-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
