added licence block

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,14 @@
         <intranet.repo>http://nexus/content/repositories</intranet.repo>
     </properties>
 
+    <licenses>
+      <license>
+        <name>Apache License, Version 2.0</name>
+        <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        <distribution>repo</distribution>
+      </license>
+    </licenses>
+
     <!-- get every artifact through repo.jenkins-ci.org, which proxies all the artifacts that we need -->
     <repositories>
         <repository>
