--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
         <intranet.repo>http://nexus/content/repositories</intranet.repo>
     </properties>
 
+    <scm>
+      <connection>scm:git:https://github.com/jenkinsci/testdroid-run-in-cloud-plugin.git</connection>
+      <developerConnection>scm:git:https://github.com/jenkinsci/testdroid-run-in-cloud-plugin.git</developerConnection>
+      <url>https://github.com/jenkinsci/testdroid-run-in-cloud-plugin</url>
+    </scm>
+
     <licenses>
       <license>
         <name>Apache License, Version 2.0</name>
