--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <properties>
         <intranet.repo>http://nexus/content/repositories</intranet.repo>
     </properties>
-
+    <url>https://wiki.jenkins-ci.org/display/JENKINS/Testdroid+Run+In+Cloud+Plugin</url>
     <scm>
       <connection>scm:git:https://github.com/jenkinsci/testdroid-run-in-cloud-plugin.git</connection>
       <developerConnection>scm:git:https://github.com/jenkinsci/testdroid-run-in-cloud-plugin.git</developerConnection>
