--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,14 @@
     <packaging>hpi</packaging>
     <name>Testdroid Plugin for CI</name>
 
+    <developers>
+      <developer>
+        <id>bitbar</id>
+        <name>Bitbar</name>
+        <email>info@bitbar.com</email>
+      </developer>
+    </developers>
+    
     <properties>
         <intranet.repo>http://nexus/content/repositories</intranet.repo>
     </properties>
