--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     </developers>
     
     <properties>
+        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
         <intranet.repo>http://nexus/content/repositories</intranet.repo>
     </properties>
     <url>https://wiki.jenkins-ci.org/display/JENKINS/Testdroid+Run+In+Cloud+Plugin</url>
@@ -80,6 +81,11 @@
                     <source>1.6</source>
                     <target>1.6</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>${maven-release-plugin.version}</version>
             </plugin>
             <plugin>
                 <groupId>com.pyx4me</groupId>
