--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     
     <properties>
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+        <maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>
         <intranet.repo>http://nexus/content/repositories</intranet.repo>
     </properties>
     <url>https://wiki.jenkins-ci.org/display/JENKINS/Testdroid+Run+In+Cloud+Plugin</url>
@@ -86,6 +87,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>${maven-release-plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>${maven-javadoc-plugin.version}</version>
+                <configuration>
+                    <additionalparam>-Xdoclint:none</additionalparam>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>com.pyx4me</groupId>
