--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>testdroid</groupId>
     <artifactId>testdroid-run-in-cloud</artifactId>
-    <version>1.0.14-SNAPSHOT</version>
+    <version>1.0.14</version>
     <packaging>hpi</packaging>
     <name>Testdroid Plugin for CI</name>
 
@@ -30,7 +30,7 @@
       <connection>scm:git:ssh://github.com/jenkinsci/testdroid-run-in-cloud-plugin.git</connection>
       <developerConnection>scm:git:ssh://github.com/jenkinsci/testdroid-run-in-cloud-plugin.git</developerConnection>
       <url>https://github.com/jenkinsci/testdroid-run-in-cloud-plugin</url>
-      <tag>HEAD</tag>
+      <tag>testdroid-run-in-cloud-1.0.14</tag>
     </scm>
 
     <distributionManagement>
