--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,9 @@
     </properties>
     <url>https://wiki.jenkins-ci.org/display/JENKINS/Bitbar+Testing+Run+In+Cloud+Plugin</url>
     <scm>
-      <connection>scm:git:ssh://github.com/jenkinsci/testdroid-run-in-cloud-plugin.git</connection>
-      <developerConnection>scm:git:ssh://github.com/jenkinsci/testdroid-run-in-cloud-plugin.git</developerConnection>
-      <url>https://github.com/jenkinsci/testdroid-run-in-cloud-plugin</url>
+        <connection>scm:git:git@github.com:jenkinsci/testdroid-run-in-cloud-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:jenkinsci/testdroid-run-in-cloud-plugin.git</developerConnection>
+        <url>git@github.com:jenkinsci/testdroid-run-in-cloud-plugin.git</url>
       <tag>HEAD</tag>
     </scm>
 
