--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>testdroid</groupId>
     <artifactId>testdroid-run-in-cloud</artifactId>
-    <version>1.0.16</version>
+    <version>1.0.17-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <name>Testdroid Plugin for CI</name>
 
@@ -31,7 +31,7 @@
         <connection>scm:git:git@github.com:jenkinsci/testdroid-run-in-cloud-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/testdroid-run-in-cloud-plugin.git</developerConnection>
         <url>git@github.com:jenkinsci/testdroid-run-in-cloud-plugin.git</url>
-      <tag>testdroid-run-in-cloud-1.0.16</tag>
+      <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
