--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>testdroid</groupId>
     <artifactId>testdroid-run-in-cloud</artifactId>
-    <version>1.0.23-SNAPSHOT</version>
+    <version>2.49.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <name>Bitbar Run-in-Cloud Plugin</name>
 
@@ -23,11 +23,11 @@
     </developers>
     
     <properties>
-        <maven-release-plugin.version>3.0.4</maven-release-plugin.version>
+        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
         <maven-javadoc-plugin.version>3.0.0</maven-javadoc-plugin.version>
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
         <intranet.repo>http://nexus/content/repositories</intranet.repo>
-        <testdroid.api.version>2.39</testdroid.api.version>
+        <testdroid.api.version>2.49</testdroid.api.version>
         <jdk.version>1.8</jdk.version>
     </properties>
     <url>https://wiki.jenkins-ci.org/display/JENKINS/Bitbar+Testing+Run+In+Cloud+Plugin</url>
@@ -110,48 +110,13 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>${maven-javadoc-plugin.version}</version>
                 <configuration>
-                    <additionalparam>-Xdoclint:none</additionalparam>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>com.pyx4me</groupId>
-                <artifactId>proguard-maven-plugin</artifactId>
-                <version>2.0.4</version>
-                <configuration>
-                    <injar>classes</injar>
-                    <outjar>obfuscated</outjar>
-                    <outputDirectory>${project.build.directory}</outputDirectory>
-                    <obfuscate>true</obfuscate>
-                    <options>
-                        <option>-dontpreverify</option>
-                        <option>-keep class
-                            com.bitbar.testdroid.jenkins.util.devicemanager.AndroidDevice
-                        </option>
-                        <option>-renamesourcefileattribute SourceFile</option>
-                        <option>-keepattributes
-                            Exceptions,InnerClasses,Signature,Deprecated,SourceFile,LineNumberTable,*Annotation*,EnclosingMethod
-                        </option>
-                        <option>-keep public class * { public protected *; }</option>
-                        <option>-keepclassmembers class * { public static final
-                            DescriptorImpl DESCRIPTOR; }
-                        </option>
-                    </options>
-                    <libs>
-                        <lib>${jars.rt}</lib>
-                    </libs>
+                    <additionalJOption>-Xdoclint:none</additionalJOption>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
     <dependencies>
-        <dependency>
-            <groupId>org.jenkins-ci.main</groupId>
-            <artifactId>cli</artifactId>
-            <version>1.596.1</version>
-            <type>pom</type>
-            <optional>false</optional>
-        </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>credentials</artifactId>
@@ -168,6 +133,5 @@
             <artifactId>testdroid-api</artifactId>
             <version>${testdroid.api.version}</version>
         </dependency>
-
     </dependencies>
 </project>
