--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>testdroid</groupId>
     <artifactId>testdroid-run-in-cloud</artifactId>
-    <version>2.63.0</version>
+    <version>2.63.1-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <name>Bitbar Run-in-Cloud Plugin</name>
 
@@ -36,7 +36,7 @@
         <connection>scm:git:git@github.com:jenkinsci/testdroid-run-in-cloud-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/testdroid-run-in-cloud-plugin.git</developerConnection>
         <url>git@github.com:jenkinsci/testdroid-run-in-cloud-plugin.git</url>
-      <tag>testdroid-run-in-cloud-2.63.0</tag>
+      <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
