--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <jdk.version>1.8</jdk.version>
         <java.level>8</java.level>
     </properties>
-    <url>https://wiki.jenkins-ci.org/display/JENKINS/Bitbar+Testing+Run+In+Cloud+Plugin</url>
+    <url>https://wiki.jenkins.io/display/JENKINS/Bitbar+Run+In+Cloud+Plugin</url>
     <scm>
         <connection>scm:git:git@github.com:jenkinsci/testdroid-run-in-cloud-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/testdroid-run-in-cloud-plugin.git</developerConnection>
