Use GitHub README for plugins.jenkins.io docs
https://www.jenkins.io/doc/developer/publishing/documentation/
describes the process to change from wiki based plugin documentation
to host the plugin documentation in GitHub.

In this case, the preferred plugin documentation location seems to be
the bitbar.com site.  Will adjust the README to first include a link
to the bitbar.com site while retaining the other information in the
README.

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <jdk.version>11</jdk.version>
         <java.level>11</java.level>
     </properties>
-    <url>https://wiki.jenkins.io/display/JENKINS/Bitbar+Run+In+Cloud+Plugin</url>
+    <url>https://github.com/jenkinsci/testdroid-run-in-cloud-plugin</url>
     <scm>
         <connection>scm:git:git@github.com:jenkinsci/testdroid-run-in-cloud-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/testdroid-run-in-cloud-plugin.git</developerConnection>
