Fix: java.lang.NoSuchMethodError: com.google.common.io.ByteStreams.exhaust

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
         <maven-javadoc-plugin.version>3.0.0</maven-javadoc-plugin.version>
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
+        <guava.version>31.0.1-jre</guava.version>
         <intranet.repo>http://nexus/content/repositories</intranet.repo>
         <testdroid.api.version>2.134.1</testdroid.api.version>
         <jdk.version>1.8</jdk.version>
@@ -87,6 +88,15 @@
         <finalName>${project.artifactId}-${project.version}</finalName>
         <plugins>
             <plugin>
+                <groupId>org.jenkins-ci.tools</groupId>
+                <artifactId>maven-hpi-plugin</artifactId>
+                <configuration>
+                    <!-- we dont want google guava from hudson/jenkins core! -->
+                    <maskClasses>com.google.common.</maskClasses>
+                    <minimumJavaVersion>1.8</minimumJavaVersion>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
                 <version>1.3</version>
@@ -118,6 +128,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>credentials</artifactId>
             <version>2.1.16</version>
@@ -145,6 +159,11 @@
     </dependencies>
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-collections4</artifactId>
