--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>4.47</version>
+        <version>4.71</version>
         <relativePath />
     </parent>
 
     <groupId>testdroid</groupId>
     <artifactId>testdroid-run-in-cloud</artifactId>
-    <version>3.16-SNAPSHOT</version>
+    <version>3.22-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <name>Bitbar Run-in-Cloud Plugin</name>
 
@@ -31,7 +31,7 @@
         <jdk.version>11</jdk.version>
         <java.level>11</java.level>
     </properties>
-    <url>https://wiki.jenkins.io/display/JENKINS/Bitbar+Run+In+Cloud+Plugin</url>
+    <url>https://plugins.jenkins.io/testdroid-run-in-cloud/</url>
     <scm>
         <connection>scm:git:git@github.com:jenkinsci/testdroid-run-in-cloud-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/testdroid-run-in-cloud-plugin.git</developerConnection>
