--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>testdroid</groupId>
     <artifactId>testdroid-run-in-cloud</artifactId>
-    <version>3.22.4-SNAPSHOT</version>
+    <version>3.22.4</version>
     <packaging>hpi</packaging>
     <name>Bitbar Run-in-Cloud Plugin</name>
 
@@ -34,7 +34,7 @@
         <connection>scm:git:git@github.com:jenkinsci/testdroid-run-in-cloud-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/testdroid-run-in-cloud-plugin.git</developerConnection>
         <url>git@github.com:jenkinsci/testdroid-run-in-cloud-plugin.git</url>
-        <tag>HEAD</tag>
+        <tag>testdroid-run-in-cloud-3.22.4</tag>
     </scm>
 
     <distributionManagement>
