Require Jenkins 2.361.4 or newer
The plugin already requires Java 11. Jenkins 2.361.1 is
the first long term support release that requires Java 11.
https://www.jenkins.io/blog/2022/06/28/require-java-11/ announced that
change in June 2022.

https://www.jenkins.io/doc/developer/plugin-development/choosing-jenkins-baseline/
recommends choosing the terminal release (2.361.4) rather than choosing the
initial release in an LTS baseline, so 2.361.4 was chosen instead of 2.361.1.

https://stats.jenkins.io/pluginversions/testdroid-run-in-cloud.html shows
that users of this plugin running Jenkins versions that require Java 11
(2.357 weekly or newer, 2.361.1 LTS or newer) are already running Jenkins
2.375.2 or newer.  This change does not create any barrier for their
upgrade to a release based on this change.  They are already running a
newer version than the minimum Jenkins version required by this change.

Declares dependency on several Jenkins API plugins for testdroid-api
rather than relying on Maven to bundle the transitive dependencies.
This reduces the size of the plugin hpi file and allows Jenkins users to
run with the more recent API version rather than requiring a new release
of this plugin.

Earlier changes in this pull request removed the bundling of guava since
a modern guava version is provided with Jenkins core.  Those dependency
changes have reduced the plugin hpi file from over 10 MB to less than
5 MB.

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <properties>
         <intranet.repo>http://nexus/content/repositories</intranet.repo>
         <testdroid.api.version>3.16</testdroid.api.version>
-        <jenkins.version>2.387.3</jenkins.version>
+        <jenkins.version>2.361.4</jenkins.version>
     </properties>
     <url>https://github.com/jenkinsci/testdroid-run-in-cloud-plugin</url>
     <scm>
@@ -91,6 +91,28 @@
     </build>
 
     <dependencies>
+        <!-- Jenkins plugins that provide libraries needed by testdroid-api -->
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>apache-httpcomponents-client-4-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>jackson2-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.jenkins.plugins</groupId>
+            <artifactId>jaxb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.jenkins.plugins</groupId>
+            <artifactId>commons-lang3-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.jenkins.plugins</groupId>
+            <artifactId>commons-text-api</artifactId>
+        </dependency>
+        <!-- End of Jenkins plugins that provide libraries needed by testdroid-api -->
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>credentials</artifactId>
@@ -104,6 +126,28 @@
             <groupId>com.testdroid</groupId>
             <artifactId>testdroid-api</artifactId>
             <version>${testdroid.api.version}</version>
+            <exclusions>
+              <!-- apache-httpcomponents-client-4-api plugin provides this -->
+              <exclusion>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+              </exclusion>
+              <!-- apache-httpcomponents-client-4-api plugin provides this -->
+              <exclusion>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpcore</artifactId>
+              </exclusion>
+              <!-- jackson2-api plugin provides this -->
+              <exclusion>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+              </exclusion>
+              <!-- jackson2-api plugin provides this -->
+              <exclusion>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+              </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -119,8 +163,8 @@
         <dependencies>
             <dependency>
                 <groupId>io.jenkins.tools.bom</groupId>
-                <artifactId>bom-2.387.x</artifactId>
-                <version>2329.v078520e55c19</version>
+                <artifactId>bom-2.361.x</artifactId>
+                <version>2102.v854b_fec19c92</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
