--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
         <version>5.9</version>
-        <relativePath/>
+        <relativePath />
     </parent>
 
     <groupId>testdroid</groupId>
     <artifactId>testdroid-run-in-cloud</artifactId>
-    <version>3.24.1-SNAPSHOT</version>
+    <version>3.40.0</version>
     <packaging>hpi</packaging>
     <name>Bitbar Run-in-Cloud Plugin</name>
 
@@ -32,7 +31,7 @@
         <connection>scm:git:git@github.com:jenkinsci/testdroid-run-in-cloud-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/testdroid-run-in-cloud-plugin.git</developerConnection>
         <url>git@github.com:jenkinsci/testdroid-run-in-cloud-plugin.git</url>
-        <tag>HEAD</tag>
+        <tag>testdroid-run-in-cloud-3.40.0</tag>
     </scm>
 
     <distributionManagement>
